# music-visualizer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: bounce_profile.md  seeds.toml  settings.toml
docs/: architecture.md  collection_log.md  design_guidelines.md  plan_cross_platform_matching.md
docs/research/: collectors_roadmap.md  genre_landscape.md  lastfm_enrichment.md  soundcloud_access.md  spotify_api.md
src/music_graph/: __init__.py  __main__.py  cli.py  config.py  db.py
src/music_graph/collectors/: __init__.py  base.py  deezer.py  rate_limiter.py  soundcloud.py  spotify.py
src/music_graph/graph/: __init__.py  edge_weights.py  export.py  projections.py
src/music_graph/judge/: __init__.py  bounce_judge.py  llm_client.py
src/music_graph/matching/: __init__.py  fuzzy.py  matcher.py  musicbrainz.py  normalize.py  resolver.py  title_parser.py
src/music_graph/models/: __init__.py  artist.py  base.py  expand_candidate.py  genre.py  matching.py  playlist.py  track.py
src/music_graph/pipeline/: __init__.py  build_graph.py  collect.py  collect_deezer.py  collect_judged.py  collect_soundcloud.py  expand.py  export_viz.py  input_filters.py  seed_from_artists.py  viz_filters.py
viz/: index.html  main.js  package.json  style.css  vite.config.js
viz-sigma/: index.html  main.js  package.json  style.css
